--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "liveServer.settings.port": 5501,
     "cSpell.words": [
+        "duodocks",
         "influencers",
+        "Rylan",
+        "Shippo",
         "wireframe",
         "Wireframes"
     ]
