initial CSS in for all pages.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "duodocks",
         "influencers",
         "Rylan",
+        "Scaryif",
         "Shippo",
         "wireframe",
         "Wireframes"
